Politicas de privacidade

--- a/html/www-bbox/en/terms-of-use/index.html
+++ b/html/www-bbox/en/terms-of-use/index.html
@@ -198,7 +198,7 @@
                     <ul class="list-inline quicklinks">
                         <li>
                             <a href="/en/terms-of-use">Terms of use</a>
-                            <!--<a href="/pt/ajuda">Ajuda</a>-->
+                            <a href="/en/privacy-policy">Privacy Policy</a>
                         </li>
                     </ul>
                 </div>
