--- a/html/www-bbox/en/terms-of-use/index.html
+++ b/html/www-bbox/en/terms-of-use/index.html
@@ -171,10 +171,14 @@
 	<strong>14- Problems of account suspended by Amazon</strong><br />
 	Voi Services is not responsible for any suspension of Amazon&#39;s sellers account, even if for reasons of purchases offered in our store.<br />
 	<br />
-	<strong>15- Invoice</strong><br />
+    <strong>15- Returning Products</strong>
+
+Voi Services will only accept the return of products that are in any way defective. As mentioned above in item 13, it is the responsibility of the user to verify the information of each product contained in the lots before finalizing the purchase. VOI Services will not accept return of products for divergences of values after the purchase of the lot.
+	<br /><br />
+    <strong>16- Invoice</strong><br />
 	Voi Services issues the Invoice of the products purchased within 48 hours of request.</p>
 <p>
-	<strong>16 - From Shipping and Delivery</strong><br />
+	<strong>17 - From Shipping and Delivery</strong><br />
 	The Voi services ships the products using the following carriers: UPS, USPS, FEDEX e DHL.</p>
 
                     </div>
@@ -189,15 +193,15 @@
                 <div class="col-md-3">
                     <span class="copyright">Copyright © VOI Services 2018</span>
                 </div>
-                <div class="col-md-7"><!--
+                <div class="col-md-3"><!--
                     <a href="https://prepshiptool.com" target="_blank" class="by download">
                         <img src="/static/img/logo-en-maior.png" width="20px" /> by VOI Services</a>
                     <span class="copyright"><strong>Adress:</strong> 920 Lafayette Rd 204-B, Seabrook, NH 03874 | <strong>Phone:</strong> 1 978 992 8417</span>
                 --></div>
-                <div class="col-md-2">
+                <div class="col-md-6">
                     <ul class="list-inline quicklinks">
                         <li>
-                            <a href="/en/terms-of-use">Terms of use</a>
+                            <a href="/en/terms-of-use">Terms of use</a> |
                             <a href="/en/privacy-policy">Privacy Policy</a>
                         </li>
                     </ul>
