Ajustes termos e condições de uso

--- a/html/www-bbox/en/terms-of-use/index.html
+++ b/html/www-bbox/en/terms-of-use/index.html
@@ -126,7 +126,7 @@
 	<br />
 	<strong>4- Signature</strong><br />
 	Only registered users who opt for subscription can use the features offered by VOI Services. Users who choose to be subscribers must make a request through their registration by selecting the designated option. The user will have his status changed to subscriber after payment of the first monthly fee and authorized by VOI Services.<br />
-	The subscriber user can request the cancellation of his subscription at any time. For this, the same must send cancellation request through official email support@voiservices.com. The user requesting cancellation must pay the days for the current month.<br />
+	The subscriber user can request the cancellation of his subscription at any time. For this, the same must send cancellation request through official email support@voiservices.com. The VOI Services will not make refound of monthly paid amounts. After the cancellation request, the subscriber will be active until the next due date.<br />
 	The subscription fee is $ 54.90 USD per month<br />
 	<br />
 	<strong>5- Modifications to the General Terms and Conditions</strong><br />
@@ -140,6 +140,7 @@
 	- Product in stock VOI Services from 11 up to 20 days: USD 1.49 per product<br />
 	- Product in stock VOI Services from 21 up to 30 days: USD 1.99 per product<br />
 	- After 30 days enter Services contact our support.<br />
+    - After 90 days the products will be discarded in order for VOI Services to be compensated for the storage costs of the products.<br>
 	<br />
 	<strong>7- Payment Processing</strong><br />
 	Payments are all made by Paypal. VOI Services does not have any other type of charge. In case the user tries to make the payment using another service that is not Paypal and through the Website, VOI Services is protected in the right of not recognizing the payment. You acknowledge that payment processing depends on compliance with certain procedures defined by the policies and terms used by Paypal. VOI Services is not responsible for problems that occur in the processing of payment by Paypal.</p>
