--- a/html/www-bbox/en/terms-of-use/index.html
+++ b/html/www-bbox/en/terms-of-use/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="pt-BR">
 
 <head>
 
@@ -9,12 +9,12 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>VOI Services - Terms and conditions</title>
-    <meta property="og:image" content="../../../static/img/logo-en-maior.png"/>
-    <meta name="description" content="VOI Services. We are the only fully automated prep & ship platform. No more sending emails back and forth. No more wait. Our system will notify you all the steps of the shipment creation."/>
-    <meta property="og:title" content="VOI Services"/>
-    <meta property="og:site_name" content="VOI Services"/>
-    <meta property="og:description" content="VOI Services. We are the only fully automated prep & ship platform. No more sending emails back and forth. No more wait. Our system will notify you all the steps of the shipment creation."/>
+    <title>Prepship Tool - Termos e condicoes</title>
+    <meta property="og:image" content="../../static/img/logo-en-maior.png"/>
+    <meta name="description" content="Prepship Tool. Somos a única plataforma totalmente automatizada de preparação e envio para Amazon. Você não precisa mais controlar seus envios e invetario em planilhas e email. Nosso sistema irá notificá-lo todas as etapas desde o recebimento do seu produto, a preparação e o envio para Amazon. Além disso, você pode acessar a nossa plataforma a hora que quiser para verificar a situação do seu estoque e seus produtos."/>
+    <meta property="og:title" content="Prepship Tool"/>
+    <meta property="og:site_name" content="Prepship Tool"/>
+    <meta property="og:description" content="Prepship Tool. Somos a única plataforma totalmente automatizada de preparação e envio para Amazon. Você não precisa mais controlar seus envios e invetario em planilhas e email. Nosso sistema irá notificá-lo todas as etapas desde o recebimento do seu produto, a preparação e o envio para Amazon. Além disso, você pode acessar a nossa plataforma a hora que quiser para verificar a situação do seu estoque e seus produtos."/>
     <meta property="og:type" content="website"/>
 
     <!-- Bootstrap Core CSS -->
@@ -53,134 +53,47 @@
 
 <body id="page-top" class="index red-br termos en">
 
-<header class="bs-docs-nav navbar navbar-static-top header-sistema" id="top">
-            <div class="navbar-header">
-                <button aria-controls="bs-navbar" aria-expanded="false" class="collapsed navbar-toggle" data-target="#bs-navbar" data-toggle="collapse" type="button">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
+    <!-- Navigation -->
+    <nav id="mainNav" class="navbar navbar-default navbar-custom navbar-fixed-top affix">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header page-scroll">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a href="/" class="navbar-brand page-scroll">
-                    <img src="../../../static/img/logo_sup.png"><span class="logo-services fr">VOI </span><span class="logo-services">SERVICES</span><!--<img src="/static/img/logo_bottom.png" />-->
-                </a>
+                <a class="navbar-brand page-scroll" href="/pt/"><img class="logo-lots" src="../../../static/img/logo-en-old.png" /></a>
             </div>
-            <nav class="collapse navbar-collapse" id="bs-navbar">
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-
-
-
-                    <li class="active">
-                        <a href="/en/store/list/" class="logo-marca-link operacional-conf"><i class="fa fa-shopping-bag"></i> Store</a>
+                    <li class="page-scroll">
+                        <a title="Home" href="/en/">Home</a>
                     </li>
-
-                    <li class="">
-                        <a href="/en/how-it-works" class=""><i class="fa fa-leanpub"></i> How it Works</a>
+                     <li>
+                        <a title="Cadastre-se" href="/en/login">Sing up Free</a>
                     </li>
-<!--
-                    <li class="">
-                        <a href="/en/faq" class=""><i class="fa fa-question-circle"></i> FAQ</a>
-                    </li>
--->
-                    <li>
-                        <a href="javascript: void(0);" id="contato-popup-link"><i class="fa fa-fw fa-envelope"></i> Contact us</a>
-                    </li>
-
-
                     <li>
                         <a title="Login" href="/en/login"><strong><i class="fa fa-sign-in"></i></strong> Log in</a>
                     </li>
 
-
                 </ul>
 
-                <a title="Traduzir para português do Brasil" class="bandeira" href="/pt/">Traduzir para português do Brasil</a>
-            </nav>
-    </header>
+                <a title="Traduzir para português" class="bandeira" href="/pt/termos-e-condicoes-de-uso/">Translate to English</a>
+
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container-fluid -->
+    </nav>
     <section>
         <div class="container">
             <div class="row">
                 <div class="col-md-1 sidebar"></div>
-                <div class="col-md-10">
-                    <h1 class="page-header"><i class="fa fa-file-text"></i> Website Terms and Conditions of Use</h1>
+                <div class="col-md-10 margin-top-40">
+                    <h1 class="page-header"><i class="fa fa-file-text"></i> Website terms and conditions of use</h1>
                     <div>
-                        <p>
-	Dear users,</p>
-<p>
-	The terms below are intended to clarify our policies and to help our users understand the general conditions of use of our platform, as well as the rights and obligations of both parties.<br />
-	These General Terms and Conditions apply to the use of the services offered by VOI Services.<br />
-	Any person, hereinafter referred to as the User, who intends to use the services of VOI Services shall accept the General Terms and Conditions and all other policies and principles governing it.<br />
-	Acceptance of these General Terms and Conditions is absolutely essential to the use of the Sites and services provided by VOI Services.<br />
-	The User must read, make sure that he / she understands and accepts all the conditions established in the General Terms and Conditions, as well as in the other documents incorporated by reference, before registering as a User of the site.<br />
-	<br />
-	<strong>1- Object</strong><br />
-	The service object of these general terms and conditions consist of (i) Sale of products in the form of lots for properly registered users and that subscribes to our service.<br />
-	<br />
-	<strong>2- Ability to register</strong><br />
-	VOI Services are available only to individuals or companies that have the legal capacity to contract the service.<br />
-	<br />
-	<strong>3- Registration</strong><br />
-	Only the registration of the User that completes all the mandatory fields of the register, with accurate and true information will be confirmed. The User declares and undertakes to update the data entered in his / her register whenever it is necessary.<br />
-	VOI Services reserves the right to refuse any registration request and to suspend a previously accepted registration, which is in disagreement with the policies and rules of these General Terms and Conditions.<br />
-	The User agree to notify VOI Services immediately, and in a safe manner, of any unauthorized use of his account, as well as his unauthorized access by third parties. The User will be solely responsible for the operations performed on his account, since access will only be possible by including the password, which should be of the User&#39;s exclusive knowledge.<br />
-	<br />
-	<strong>4- Signature</strong><br />
-	Only registered users who opt for subscription can use the features offered by VOI Services. Users who choose to be subscribers must make a request through their registration by selecting the designated option. The user will have his status changed to subscriber after payment of the first monthly fee and authorized by VOI Services.<br />
-	The subscriber user can request the cancellation of his subscription at any time. For this, the same must send cancellation request through official email support@voiservices.com. The VOI Services will not make refound of monthly paid amounts. After the cancellation request, the subscriber will be active until the next due date.<br />
-	The subscription fee is $ 54.90 USD per month<br />
-	<br />
-	<strong>5- Modifications to the General Terms and Conditions</strong><br />
-	VOI Services may change, at any time, these General Terms and Conditions, aiming at its improvement of the services provided.<br />
-	The changes will not take effect in relation to operations already started before their publication, in which case the previous wording remains in effect.</p>
-<p>
-	<strong>6- Product submissions to Amazon</strong><br />
-	VOI Services does not offer redirection service. VOI Services ships only products that were purchased through the Website.<br />
-	Sending products to Amazon is offered without charge of any redirection fee. For the user to enjoy the free redirection, the products included in the purchased lot must be sent in full in a period of up to 3 business days. If the shipment has not been created within three working days, the following shipping charges will be applied:<br />
-	- Product in stock VOI Services from 4 up to 10 days: USD 1.29 per product<br />
-	- Product in stock VOI Services from 11 up to 20 days: USD 1.49 per product<br />
-	- Product in stock VOI Services from 21 up to 30 days: USD 1.99 per product<br />
-	- After 30 days enter Services contact our support.<br />
-    - After 90 days the products will be discarded in order for VOI Services to be compensated for the storage costs of the products.<br>
-	<br />
-	<strong>7- Payment Processing</strong><br />
-	Payments are all made by Paypal. VOI Services does not have any other type of charge. In case the user tries to make the payment using another service that is not Paypal and through the Website, VOI Services is protected in the right of not recognizing the payment. You acknowledge that payment processing depends on compliance with certain procedures defined by the policies and terms used by Paypal. VOI Services is not responsible for problems that occur in the processing of payment by Paypal.</p>
-<p>
-	<strong>8- Privacy Information</strong><br />
-	All information or User Personal Data is stored on servers or high security magnetic media. VOI Services will take all reasonable steps to maintain the confidentiality and security of sensitive information.<br />
-	The User expressly authorizes that his information and personal data are shared by VOI Services with other companies belonging to the economic group, commercial partners, members of the Program of Protection of Intellectual Property, authorities and individuals or legal entities who claim to have been harmed by Users.<br />
-	<br />
-	<strong>9- Penalties</strong><br />
-	Without prejudice to other applicable measures, VOI Services may warn, temporarily or permanently suspend a User&#39;s account at any time, initiating legal actions and / or suspending the provision of its services if: a) the User does not comply with any provision of these Terms and Conditions of Use and other VOI Services policies; b) disobeys with their User duties; c) if he practices fraudulent or intentional acts; d) if the identity of the User can not be verified or if any information provided by the User is incorrect; In cases of suspension of the user account, all products contained in the user&#39;s stock will be automatically canceled and will be returned to the customer. If it does not indicate the place to be returned, the products will be considered abandoned.<br />
-	VOI Services reserves the right at any time and in its sole discretion to request the sending of personal documentation and / or products. Failure to comply may result in the exclusion of the user and its products.<br />
-	<br />
-	<strong>10- Responsibilities</strong><br />
-	VOI Services is responsible for any damages caused to the products of its Users for defects relating exclusively to the provision of its storage and shipping service.<br />
-	<br />
-	<strong>11- System failures</strong><br />
-	VOI Services shall not be liable for any damages or losses suffered by the User due to failures in the internet, in the system or in the server used by the user, arising from third-party conduct, fortuitous event or force majeure. VOI Services will not be responsible for any virus that may attack your equipment as a result of access, use or navigation on the Internet or as a consequence of the transfer of data, files, images, texts, videos or audio.<br />
-	<br />
-	<strong>12- From support</strong><br />
-	Support for users is done via email at support@voiservices.com. VOI Services is not responsible for requests made through another channel other than the official customer support email.<br />
-	VOI Services will only support issues related to the Website, its features, bugs, doubts and complaints. Any other kind of subject will not be attended to.<br />
-	<br />
-	<strong>13- Information discrepancies</strong><br />
-	It is the responsibility of the customer to confirm the data informed in each lot, such as: Rank, Value of Sale, FBA Rate, Profits, etc. The data may change from the date they were conferred until the subscriber buys the respective lot.<br />
-	VOI Services is not responsible for products purchased that are restricted by Amazon. It is the responsibility of the subscriber to verify that the products in the lot are authorized for sale.<br />
-	VOI Services is not responsible for the delay time for the products to be sold on Amazon.<br />
-	It is imperative that the subscriber, before finalizing the purchase, re-check all necessary and informed information with Amazon.<br />
-	<br />
-	<strong>14- Problems of account suspended by Amazon</strong><br />
-	Voi Services is not responsible for any suspension of Amazon&#39;s sellers account, even if for reasons of purchases offered in our store.<br />
-	<br />
-    <strong>15- Returning Products</strong>
 
-Voi Services will only accept the return of products that are in any way defective. As mentioned above in item 13, it is the responsibility of the user to verify the information of each product contained in the lots before finalizing the purchase. VOI Services will not accept return of products for divergences of values after the purchase of the lot.
-	<br /><br />
-    <strong>16- Invoice</strong><br />
-	Voi Services issues the Invoice of the products purchased within 48 hours of request.</p>
-<p>
-	<strong>17 - From Shipping and Delivery</strong><br />
-	The Voi services ships the products using the following carriers: UPS, USPS, FEDEX e DHL.</p>
 
                     </div>
                 </div>
@@ -191,57 +104,29 @@ Voi Services will only accept the return of products that are in any way defecti
     <footer>
         <div class="container">
             <div class="row">
-                <div class="col-md-3">
-                    <span class="copyright">Copyright © VOI Services 2018</span>
+                <div class="col-md-4">
+                    <span class="copyright">Copyright &copy; FBAPrepMaster 2018</span>
                 </div>
-                <div class="col-md-3"><!--
-                    <a href="https://prepshiptool.com" target="_blank" class="by download">
-                        <img src="/static/img/logo-en-maior.png" width="20px" /> by VOI Services</a>
-                    <span class="copyright"><strong>Adress:</strong> 920 Lafayette Rd 204-B, Seabrook, NH 03874 | <strong>Phone:</strong> 1 978 992 8417</span>
-                --></div>
-                <div class="col-md-6">
+                <div class="col-md-3">
+                    <ul class="list-inline social-buttons"><!--
+                        <li><a href="#"><i class="fa fa-twitter"></i></a>
+                        </li>
+                        <li><a href="https://www.facebook.com/groups/vendedorinternacional/">Facebook</a>
+                        </li>
+                        <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                        </li>-->
+                    </ul>
+                </div>
+                <div class="col-md-5">
                     <ul class="list-inline quicklinks">
                         <li>
-                            <a href="/en/terms-of-use">Terms of use</a> |
-                            <a href="/en/privacy-policy">Privacy Policy</a>
+                            <a href="/en/terms-of-use/">Terms of use</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </div>
     </footer>
-
-    <div id="contato-modal" class="modal fade modal-m">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                    <h4 class="modal-title">Contact us</h4>
-                </div>
-                <div class="modal-body">
-                    <p>Send us an email to <a class="download" href="mailto:support@voiservices.com">support@voiservices.com</a>.</p>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- jQuery -->
-    <script src="../../static/externo/jquery/jquery.min.js"></script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="../../static/externo/bootstrap/js/bootstrap.min.js"></script>
-
-    <!-- Plugin JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js" integrity="sha384-mE6eXfrb8jxl0rzJDBRanYqgBxtJ6Unn4/1F7q4xRRyIw7Vdg9jP4ycT7x1iVsgb" crossorigin="anonymous"></script>
-
-    <!-- Contact Form JavaScript -->
-    <script src="../../static/js/jqBootstrapValidation.js"></script>
-
-    <!-- Theme JavaScript -->
-    <script src="../../static/js/applications.js"></script>
 
 </body>
 
