--- a/html/www-bbox/pt/index.html
+++ b/html/www-bbox/pt/index.html
@@ -238,19 +238,19 @@
                 <div class="container-fluid">
                   <div class="row">
                     <div class="col-md-12 main">
-                       <div class="col-md-8 div-center">
+
                            <h3 class="section-heading center">FBA prep and ship</h3><br>
                            <p class="text-muted">Este serviço destina-se a quem faz online arbitrage, retail arbitrage, Private Label entre outros e não
                         quer perder tempo preparando seus produtos e os enviando para Amazon. Nós temos a solução completa para você. Não precisa enviar email, preencher planilha, nada disso.
                     Nós temos uma plataforma que fornece todo o processo de preparo e envio. Você só precisa efetuar seu cadastro <a class="download" target="_blank" href="#">clicando aqui</a> cadastrar os produtos na nossa plataforma, criar seu envio e fazer upload dos labels. Com poucos cliques, seus produtos já estarão no seu inventário Amazon.</p>
 <br>
-                           <iframe width="100%" height="420" src="https://www.youtube.com/embed/Ynvz6vP0aJ4?enablejsapi=1&amp;modestbranding=1&amp;rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
-                       </div>
+                           <iframe width="100%" height="520" src="https://www.youtube.com/embed/Ynvz6vP0aJ4?enablejsapi=1&amp;modestbranding=1&amp;rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
+
                     </div>
                   </div><br><br><hr><br>
                     <div class="row">
                     <div class="col-md-12 main">
-                       <div class="col-md-8 div-center">
+
                            <h3 class="section-heading center">Ecommerce Storage prep and ship</h3><br>
                            <p class="text-muted">Este serviço destina-se a quem precisa de um local seguro e confiável para armazenar seus produtos até os mesmos serem
                         vendidos, por exemplo, FBM, Ebay, Etsy, entre outros. A cobrança do armazenamento é mensal e você só paga pelo preparo dos produtos quando for enviá-los aos seus clientes.
@@ -258,19 +258,19 @@
                         utilizar nosso serviço de storage. Depois cadastrar os produtos
                         e quando vendê-los, basta criar seu envio e fazer upload dos labels. Com poucos cliques,
                         seus produtos serão enregues aos seus clientes.</p>
-                           <br><iframe width="100%" height="420" src="https://www.youtube.com/embed/Ynvz6vP0aJ4?enablejsapi=1&amp;modestbranding=1&amp;rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
-                       </div>
+                           <br><iframe width="100%" height="520" src="https://www.youtube.com/embed/Ynvz6vP0aJ4?enablejsapi=1&amp;modestbranding=1&amp;rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
+
                     </div>
                   </div><br><br><hr><br>
                     <div class="row">
                     <div class="col-md-12 main">
-                       <div class="col-md-8 div-center">
+
                            <h3 class="section-heading center">We plain your shipment on Amazon</h3><br>
                            <p class="text-muted">Nós criamos o seu envio na Amazon para você. Você nos dá acesso a sua conta (Apenas na parte de shipment) e fazemos todos o processo para você. Basta apontar na plataforma quais produtos você deseja enviar do seu estoque e faremos todos o resto para você. Para isso, basta no momento do seu cadastro, você nos informar que deseja esse serviço. A partir daí, você
                     terá uma mensalidade e só se preocupará em comprar seus produtos e enviá-los para nós. O resto nós faremos para você.</p>
-                    <br><iframe width="100%" height="420" src="https://www.youtube.com/embed/Ynvz6vP0aJ4?enablejsapi=1&amp;modestbranding=1&amp;rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
+                    <br><iframe width="100%" height="520" src="https://www.youtube.com/embed/Ynvz6vP0aJ4?enablejsapi=1&amp;modestbranding=1&amp;rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
                        </div>
-                    </div>
+
                   </div>
                 </div>
             </div>
@@ -423,11 +423,11 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Fale Conosco</h2>
-                    <h3 class="section-subheading text-muted">Caso precise de algum esclarecimento, teremos o maior prazer em atendê-lo. Preencha os campos abaixo e retornaremos o mais breve possível.</h3>
+                    <h3 class="section-subheading text-muted">Caso precise de algum esclarecimento, teremos o maior prazer em atendê-lo. Envie um email para <a class="download" href="mailto:support@voiservices.com">support@voiservices.com</a> </h3>
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-12">
+                <div class="col-lg-12"><!--
                     <form name="sentMessage" id="contactForm" novalidate>
                         <div class="row">
                             <div class="col-md-6">
@@ -456,7 +456,7 @@
                                 <button type="submit" class="btn btn-xl">Enviar</button>
                             </div>
                         </div>
-                    </form>
+                    </form>-->
                 </div>
             </div>
         </div>
