ajustes inclusão do box com código do usuário e páginas estáticas de ajuda

--- a/html/www-bbox/pt/index.html
+++ b/html/www-bbox/pt/index.html
@@ -137,19 +137,19 @@
                     <h4 class="subheading"><i class="fa fa-5x fa-amazon"></i> <br>FBA prep and ship</h4>
                     <p>Ideal para quem trabalha com FBA. Nos envie seus produtos. Nós inspecionamos, e realizamos tudo que você precisa para que seu produto chegue o mais rápido possível no seu inventário na Amazon.</p>
                     <p><a class="btn btn-danger" href="#prices"><i class="fa fa-check-square-o"></i> Valores</a></p>
-                    <p><a class="btn btn-danger" href="#"><i class="fa fa-check-square-o"></i> Como funciona</a></p>
+                    <p><a class="btn btn-danger" href="#fba"><i class="fa fa-check-square-o"></i> Como funciona</a></p>
                 </div>
                 <div class="col-md-4 center">
                     <h4 class="subheading"><i class="fa fa-5x fa-shopping-cart"></i> <br>Ecommerce Storage prep and ship</h4>
                     <p>Esse serviço destina-se para quem vende seus produtos no mercado online, seja FBM, Ebay ou qualquer outro e precisa de um serviço onde possa receber, armazenar e enviar seus produtos de forma rápida e segura.</p>
                     <p><a class="btn btn-danger" href="#storage"><i class="fa fa-check-square-o"></i> Valores</a></p>
-                    <p><a class="btn btn-danger" href="#"><i class="fa fa-check-square-o"></i> Como funciona</a></p>
+                    <p><a class="btn btn-danger" href="#storage"><i class="fa fa-check-square-o"></i> Como funciona</a></p>
                 </div>
                 <div class="col-md-4 center">
                     <h4 class="subheading"><i class="fa fa-5x fa-book"></i> <br>We plain your shipment on Amazon</h4>
                     <p>Nós não nos limitamos a apenas armazenar, preparar e enviar seu produto como também criamos o seu envio na Amazon para você. Concentre-se em apenas fazer com que seu negócio cresça.</p>
                     <p><a class="btn btn-danger" href="#storage"><i class="fa fa-check-square-o"></i> Valores</a></p>
-                    <p><a class="btn btn-danger" href="#"><i class="fa fa-check-square-o"></i> Como funciona</a></p>
+                    <p><a class="btn btn-danger" href="#plain"><i class="fa fa-check-square-o"></i> Como funciona</a></p>
                 </div>
 
             </div>
@@ -237,7 +237,7 @@
                 <br><br>
                 <div class="container-fluid">
                   <div class="row">
-                    <div class="col-md-12 main">
+                    <div class="col-md-12 main" id="fba">
 
                            <h3 class="section-heading center">FBA prep and ship</h3><br>
                            <p class="text-muted">Este serviço destina-se a quem faz online arbitrage, retail arbitrage, Private Label entre outros e não
@@ -248,7 +248,7 @@
 
                     </div>
                   </div><br><br><hr><br>
-                    <div class="row">
+                    <div class="row" id="storage">
                     <div class="col-md-12 main">
 
                            <h3 class="section-heading center">Ecommerce Storage prep and ship</h3><br>
@@ -262,7 +262,7 @@
 
                     </div>
                   </div><br><br><hr><br>
-                    <div class="row">
+                    <div class="row" id="plain">
                     <div class="col-md-12 main">
 
                            <h3 class="section-heading center">We plain your shipment on Amazon</h3><br>
