--- a/html/www-bbox/pt/ajuda/index.html
+++ b/html/www-bbox/pt/ajuda/index.html
@@ -61,7 +61,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="/pt/"><img src="../../../static/img/logo-en.png" /></a>
+                <a class="navbar-brand page-scroll" href="/pt/"><img class="logo-lots" src="../../../static/img/logo-en-old.png" /></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -101,6 +101,7 @@
                        <li><a data-toggle="tab" href="#enviaramz">Enviar para Amazon</a></li>
                        <li><a data-toggle="tab" href="#enviarmer">Enviar Merchant</a></li>
                        <li><a data-toggle="tab" href="#endereco">Nosso Endereço </a></li>
+                       <li><a data-toggle="tab" href="#create">Como configurar sua conta para criarmos o envio pra você</a></li>
                     </ul>
                     <div class="tab-content">
                         <div id="cadastro" class="tab-pane active">
@@ -212,7 +213,11 @@
                             <p>Lembrando que todos os passos e troca de status você será notificado via email.</p>
                         </div>
                         <div id="endereco" class="tab-pane fade">
-                            <p><strong>Address: 8611 SW  207 Terrace<br />City: Miami ou Cutler Bay<br />State: FL <br />Zip code: 33189</strong></p>
+                            <p><strong>Address: 920 Lafayette Road, 204-B<br />City: Seabrook<br />State: NH <br />Zip code: 03874</strong></p>
+                        </div>
+                        <div id="create" class="tab-pane fade">
+                            <iframe width="100%" height="520" src="https://www.youtube.com/embed/Ynvz6vP0aJ4?enablejsapi=1&amp;modestbranding=1&amp;rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
+
                         </div>
                     </div>
                 </section>
@@ -225,40 +230,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Fale Conosco</h2>
-                    <h3 class="section-subheading text-muted">Caso precise de algum esclarecimento, teremos o maior prazer em atendê-lo. Preencha os campos abaixo e retornaremos o mais breve possível.</h3>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-12">
-                    <form name="sentMessage" id="contactForm" novalidate>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <input type="text" class="form-control" name="name" placeholder="Digite aqui seu nome *" id="name" required data-validation-required-message="Campo obrigatório">
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                                <div class="form-group">
-                                    <input type="email" class="form-control" name="email" placeholder="Digite aqui seu email *" id="email" required data-validation-required-message="Campo obrigatório">
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                                <div class="form-group">
-                                    <input type="tel" class="form-control" name="tel" placeholder="Digite aqui seu telefone de contato *" id="phone" required data-validation-required-message="Campo obrigatório">
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <textarea class="form-control" name="message" placeholder="Escreva sua mensagem *" id="message" required data-validation-required-message="Campo obrigatório"></textarea>
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                            </div>
-                            <div class="clearfix"></div>
-                            <div class="col-lg-12 text-center">
-                                <div id="contact-us-feedback"></div>
-                                <button type="button" class="btn btn-xl" id="contactus-form">Enviar</button>
-                            </div>
-                        </div>
-                    </form>
+                    <h3 class="section-subheading text-muted">Caso precise de algum esclarecimento, teremos o maior prazer em atendê-lo. Envie um email para <a class="download" href="mailto:support@voiservices.com">support@voiservices.com</a> </h3>
                 </div>
             </div>
         </div>
