ajustes termos fba

--- a/html/www-fba/pt/index.html
+++ b/html/www-fba/pt/index.html
@@ -61,7 +61,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll logo-site" href="#page-top">PrepShip Tool logo</a>
+                <a class="navbar-brand page-scroll logo-site" href="#page-top">PrepShip Tool logo</a><span>By <strong>VOILOTS</strong></span>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -80,10 +80,10 @@
                         <a title="Services" class="page-scroll" href="#contact">Contato</a>
                     </li>
                      <li>
-                        <a title="Sign up free" href="/en/user/registration">Cadastre-se</a>
+                        <a title="Sign up free" href="/pt/usuario/cadastro/">Cadastre-se</a>
                     </li>
                     <li>
-                        <a title="Log in" href="/en/login"><strong><i class="fa fa-sign-in"></i></strong> Log in</a>
+                        <a title="Log in" href="/pt/entrar"><strong><i class="fa fa-sign-in"></i></strong> Log in</a>
                     </li>
 
                 </ul>
@@ -117,7 +117,7 @@
                     <li><i class="fa fa-2x  fa-users"></i> Equipe treinada e qualificada</li>
                     <li><i class="fa fa-2x  fa-gavel"></i> Serviço de criação de labels</li>
                 </ul><br>
-                 <a href="/en/user/registration" title="Sign up now" class="btn btn-xl signup">Cadastre-se</a>
+                 <a href="/pt/usuario/cadastro/" title="Sign up now" class="btn btn-xl signup">Cadastre-se</a>
             </div>
         </div>
     </header>
