--- a/html/www-fba/pt/ajuda/index.html
+++ b/html/www-fba/pt/ajuda/index.html
@@ -61,7 +61,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="/pt/"><img class="logo-lots" src="../../../static/img/logo-en-old.png" /></a>
+                <a class="navbar-brand page-scroll logo-site" href="#page-top">PrepShip Tool logo</a><span>By <strong>VOILOTS</strong></span>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -239,7 +239,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright">Copyright &copy; Prepship Tool 2017</span>
+                    <span class="copyright">Copyright &copy; FBAPrepMaster by VOI Redirect</span>
                 </div>
                 <div class="col-md-3">
                     <ul class="list-inline social-buttons"><!--
@@ -254,7 +254,7 @@
                 <div class="col-md-5">
                     <ul class="list-inline quicklinks">
                         <li>
-                            <a href="/pt/termos-e-condicoes-de-uso">Termos e Condições de Uso</a>
+                            <a href="/pt/termos-e-condicoes-de-uso/">Termos e Condições de Uso</a>
                         </li>
                     </ul>
                 </div>
